merged threading branch back into head
git-svn-id: http://svn.code.sf.net/p/sonia/source_code@134 fb298286-8e17-4df1-bf80-b634edc3145b